--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.detail.DetailActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.GFlix.NoActionBar" />
         <activity
             android:name=".ui.home.HomeActivity"
             android:exported="true"
