--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,15 @@
         android:theme="@style/Theme.GFlix"
         tools:targetApi="31">
         <activity
+            android:name=".ui.home.HomeActivity"
+            android:exported="false"
+            android:theme="@style/Theme.GFlix.NoActionBar"/>
+        <activity
             android:name=".ui.detail.DetailActivity"
             android:exported="false"
             android:theme="@style/Theme.GFlix.NoActionBar" />
         <activity
-            android:name=".ui.home.HomeActivity"
+            android:name=".ui.splashscreen.SplashScreenActivity"
             android:exported="true"
             android:theme="@style/Theme.GFlix.NoActionBar">
             <intent-filter>
